--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,6 @@
     <string name="infection_status">Infection status</string>
     <string name="logo">logo</string>
     <string name="go_back_to_main">Go back to main activity</string>
-
+    <string name="login_err_invalid_cred">Invalid email or password!</string>
 
 </resources>
