--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,15 +3,14 @@
     <string name="global_txt_email" translatable="false">Email</string>
     <string name="auth_txt_password">Password</string>
     <string name="register_txt_conf_password">Confirm password</string>
-    <string name="register_txt_sign_up">Sign up</string>
-    <string name="login_txt_sign_in">Sign in</string>
+    <string name="register_btn_sign_up">Sign up</string>
+    <string name="login_btn_sign_in">Sign in</string>
     <string name="register_txt_sign_in_redirect">Already a member? Sign in!</string>
     <string name="login_txt_forgot_password">Forgot password?</string>
     <string name="login_txt_sign_up_redirect">Don\'t have an account? Register here!</string>
-    <string name="login_desc_sign_in">Sign in text</string>
-    <string name="register_desc_join_us">Join us text</string>
+    <string name="login_txt_sign_in">Sign in</string>
     <string name="reset_info_reset_pw_email">You will receive now an email with instructions on resetting password.</string>
-    <string name="reset_txt_reset_pw">Reset password</string>
+    <string name="reset_btn_reset_pw">Reset password</string>
     <string name="reset_txt_go_back">Go back to Sign In.</string>
     <string name="reset_desc_reset_pw">Password reset text</string>
     <string name="main_txt_your_recent_locations">Your recent locations:</string>
@@ -27,5 +26,12 @@
     <string name="stats_desc_go_back">Go back to main activity</string>
     <string name="login_err_invalid_cred">Invalid email or password!</string>
     <string name="register_txt_join_us">Join Us!</string>
-    <string name="reset_txt_pw_reset">Password Reset!</string>
+    <string name="reset_txt_reset_pw">Password Reset!</string>
+    <string name="login_err_unverified_email">Email is not verified!</string>
+    <string name="login_err_required">Required!</string>
+    <string name="login_err_invalid_email">Invalid email!</string>
+    <string name="register_err_sth_wrong">Something went wrong!</string>
+    <string name="register_info_email_verification">Email verification was sent!</string>
+    <string name="register_err_password_same">Password must be the same!</string>
+    <string name="reset_info_email_with_reset">Email with reset password was sent!</string>
 </resources>
