add dialog boxes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="login_err_invalid_cred">Invalid email or password!</string>
     <string name="joinUs">Join Us!</string>
     <string name="passwordReset">Password Reset!</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
