--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -45,4 +45,5 @@
     <string name="global_err_location_null">Lokalizacja nie została jeszcze ustalona!</string>
     <string name="global_info_ask_gps">Czy chcesz włączyć GPS?</string>
     <string name="global_info_ask_rational">Czy chcesz to zrobić?</string>
+    <string name="global_err_no_int_conn">Brak połączenia z Internetem!</string>
 </resources>
