--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,5 @@
     <string name="global_err_no_int_conn">No Internet connection!</string>
     <string name="map_info_bad_time">The selected time is incorrect!</string>
     <string name="main_txt_infected">Infected</string>
-    <string name="main_txt_helathy">Healthy</string>
+    <string name="main_txt_healthy">Healthy</string>
 </resources>
