Other improvements to algorithm

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -50,4 +50,5 @@
     <string name="main_txt_infected">Zarażony</string>
     <string name="main_txt_healthy">Zdrowy</string>
     <string name="global_err_location_not_readed">Lokalizacja nie została odczytana!</string>
+    <string name="main_txt_danger">Jesteś zagrożony!</string>
 </resources>
